Renaming screenshot directory to screens

--- a/src/manual.tex
+++ b/src/manual.tex
@@ -114,7 +114,7 @@
 \newcommand{\appscreenshot}[4]{
 	\begin{figure}[ht!]%	
 	\label{#4}%
-	\includegraphics[width=4.4cm]{\AssetsPath/screenshots/#1}%
+	\includegraphics[width=4.4cm]{\AssetsPath/screens/#1}%
 	\centering%
 	\caption{\textbf{#2}: #3}%	
 	\end{figure}%
