Split score and match tex files

--- a/src/manual.tex
+++ b/src/manual.tex
@@ -191,6 +191,7 @@
 \clearpage\input{section/events.tex}
 \clearpage\input{section/questionnaires.tex}
 \clearpage\input{section/questions.tex}
+\clearpage\input{section/scoring.tex}
 \clearpage\input{section/matching.tex}
 \clearpage\input{section/troubleshooting.tex}
 \clearpage\input{section/limitations.tex}
