Adds comparison score matrix

--- a/src/section/questions.tex
+++ b/src/section/questions.tex
@@ -20,7 +20,7 @@ The multiple answer and multiple choice question types allows you to add or remo
 You can reorder the questions in a template on the Template Builder page (Figure 4.4). In the questions list, tap down on a question that you need to be moved and drag the question to its intended position. 
 
 \subsection{Question match criteria}
-\label{sec:matchcriterua}
+\label{sec:matchcriteria}
 \Friending{} compares the answers to questions in questionnaires to determine a numerical score to perform matches.  The question match criteria defines how many points are awarded based on the two provided answers.   The You column represents the chosen answer, and the Star Ratings ( ) represent the points award if the comparison answer has chosen this.  
 
 On the Question Builder pages (Figure 4.7) for each of the question types, you can select the Matching Segment ( ) of the segmentation control.   
