docs: Remove comment separation from the primary file

--- a/src/manual.tex
+++ b/src/manual.tex
@@ -140,15 +140,13 @@
 \newcommand{\quicknav}{\Screenshot{Navigation Menu} (Figure~\ref{fig:navigation})}
 
 %%%%
-%%%% 
+%%%%
 %%%%
 
 \begin{document}
 
-% Title page
-%
-% The title page of the manual
-
+%% Title page
+%%
 \begin{titlepage}
 	\centering
 	\includegraphics[width=100mm]{assets/icons/icon.png}\\
@@ -167,21 +165,20 @@
 	{\small Version \input{VERSION.txt}}
 \end{titlepage}
 
-% Table of Contents
-%
-
+%% Table of Contents
+%%
 \clearpage
+
 \tableofcontents
 
-% List of Figures
-%
-
+%% List of Figures
+%%
 \clearpage
+
 \listoffigures
 
-% Manual
-%
-% The beginning of the manual
+%% Manual
+%%
 \clearpage\input{section/introduction.tex}
 \clearpage\input{section/conventions.tex}
 \clearpage\input{section/account.tex}
